fixed css styling issues

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="header-cart">
-          <a ui-sref="cart"><img src="./img/icon-logo/cart.svg" alt="Cart" class="cart-svg"/></a>
+          <a ui-sref="cart" class="cart-link"><img src="./img/icon-logo/cart.svg" alt="Cart" class="cart-svg"/></a>
           <p class=cart-items> 1 ITEM</p>
         </div>
       </div>
@@ -111,7 +111,7 @@
   <div class="bottom-footer">
     <div id="holder"><a href="javascript:void(0);" id="main" data-anijs="if:click, do: hinge animated, to: div"> <img src="./img/icon-logo/logo--circle--white.svg" alt="Don't Click Me"/></a></div>
 
-    <div class="terms">
+    <div class="terms" id="terms">
       <p>
         Terms of Use
       </p>
@@ -138,9 +138,9 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
 
 
-    <script src="./app.js"></script>
-    <script src="./controller.js"></script>
-    <script src="./service.js"></script>
+    <script src="./source/app.js"></script>
+    <script src="./source/controller.js"></script>
+    <script src="./source/service.js"></script>
     <script src="./source/products/prodCtrl.js"></script>
     <script src="./source/home/homeCtrl.js"></script>
     <script src="./source/cart/cartCtrl.js"></script>
