--- a/source/cart/cart.html
+++ b/source/cart/cart.html
@@ -1,1 +1,7 @@
-<cart-dir></cart-dir>
+<div class="col-md-12">
+  <div class="control-group" ng-repeat="prod in getCartItems | filter: {name: searched}" >
+    <div class="col-md-4 prod-pics">
+      <img src={{prod.img}} alt={{prod.name}} class="{{prod.class}} animated"/>{{prod.name}}
+    </div>
+  </div>
+</div>
