adjusting cart image in footer

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div class="footer-cart">
        <a ui-sref="cart"><img src="./img/icon-logo/cart-footer.svg" alt="Cart" class="cart-svg" /></a>
-      <p class=cart-items>1 ITEM</p>
+      <p class=cart-items-footer>1 ITEM</p>
     </div>
 
 
