--- a/source/home/home.html
+++ b/source/home/home.html
@@ -7,7 +7,7 @@
 
   <div class="container">
     <div class="swiper">
-    <div><img src="img/carousel/car1.jpg" alt="Image 1" ng-class="car1"/></div>
+    <div class="photoContainer"><img src="img/carousel/car1.jpg" alt="Image 1" ng-class="car1"/></div>
     <!-- <div><img src="img/carousel/car2.jpg" alt="Image 2" ng-class="car2"/></div>
     <div><img src="img/carousel/car3.jpg" alt="Image 3" ng-class="car3"/></div>
     <div><img src="img/carousel/car4.jpg" alt="Image 4" ng-class="car4"/></div>
